<resources>
    <string name="app_name">Screwy</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="username">Username</string>
    <string name="todo">TODO</string>
    <string name="sign_out">Sign Out</string>
    <string name="search">search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="cancel">cancel</string>
    <string name="save">save</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_profile">profileActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="chats_fragment">Chats</string>
    <string name="profile_fragment">Profile</string>
    <string name="requests_fragment">Friend Requests</string>
    <string name="Create_account">Don\'t Have An Account?</string>
    <string name="create_account">Create new account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="signup">Sign Up</string>
    <string name="agree">Agree</string>
    <string name="decline">Decline</string>
    <string name="request_text">You want to chat with  </string>
    <string name="request">Requests</string>
    <string name="add_trusted_text">So you wanna add this person to your trusted list?</string>
    <string name="delete">Delete</string>
    <string name="sign_out_text">Are you sure you want to signout?</string>
    <string name="remove_trusted">You wanna kick him outta here?</string>
    <string name="category">Choose a category</string>
    <string name="click_here">Click Here</string>
    <string name="create_new">Create a Screwy account</string>
    <string name="login_options">Login Options</string>
    <string name="welcome_fuckin_msg">Get Ready to $crew your mates!</string>
    <string name="eternity">ETERNITY</string>
</resources>