<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_12sdp"
        tools:context=".ui.CreateAccountActivity">
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="@dimen/_39sdp"
                android:layout_height="@dimen/_39sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_3sdp"
                android:src="@drawable/screwy_logo" />

            <ImageView
                android:id="@+id/screwy_text"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/screwy" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/signup_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_30sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:fontFamily="@font/almendra_sc"
                android:text="@string/welcome_fuckin_msg"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textSize="21sp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:hint="@string/username"
                android:maxLines="1"
                android:drawableStart="@drawable/selector_drawable_username"
                android:drawablePadding="@dimen/_7sdp"
                android:background="@drawable/selector_edit_text"
                android:textColor="@color/colorPrimary"
                android:textColorHint="#80424242" />

            <EditText
                android:id="@+id/email_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/selector_edit_text"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:drawableStart="@drawable/selector_drawable_mail"
                android:drawablePadding="@dimen/_7sdp"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimary"
                android:textColorHint="#80424242"
                android:textScaleX="1" />

            <EditText
                android:id="@+id/password_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/selector_edit_text"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:drawableStart="@drawable/selector_drawable_password"
                android:drawablePadding="@dimen/_7sdp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="#80424242" />

            <Button
                android:id="@+id/create_account_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:background="@drawable/login_button"
                android:text="@string/signup"
                android:textColor="@color/lightcolor"
                android:textSize="16sp" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
