<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="0dp"
        android:layout_marginBottom="1dp"
        app:cardBackgroundColor="@color/incog_primaryDark">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="30dp"
                android:layout_height="30dp"
                />
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/status"
                android:layout_width="7dp"
                android:layout_height="7dp"
                android:layout_marginTop="22dp"
                android:layout_marginStart="22dp"
                android:src="@color/colorAccent"
                />

            <TextView
                android:id="@+id/user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/profile_image"
                android:textColor="@color/colorAccent"
                android:text="@string/username"
                android:textSize="18dp" />
            <ImageButton
                android:id="@+id/decline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decline"
                android:textColor="@color/colorAccent"
                android:src="@drawable/ic_baseline_decline_24"
                android:layout_marginEnd="20dp"
                android:background="@color/transparent"
                android:layout_below="@+id/profile_image"
                android:layout_toStartOf="@+id/agree"
                android:layout_marginTop="2dp"/>
            <ImageButton
                android:id="@+id/agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agree"
                android:textColor="@color/colorAccent"
                android:background="@color/transparent"
                android:src="@drawable/ic_baseline_agree_24"
                android:layout_marginEnd="20dp"
                android:layout_below="@+id/profile_image"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="2dp"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>